# ttyper-py

./: README.md  pyproject.toml
tests/: test_port.py
ttyper/: __init__.py  __main__.py  app.py  cli.py  config.py  render.py  results.py  test.py
