[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ttyper"
version = "1.6.0"
description = "Terminal-based typing test (Python port of max-niederman/ttyper)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "textual>=0.50",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ttyper = "ttyper.__main__:main"

[tool.setuptools]
packages = ["ttyper"]

[tool.setuptools.package-data]
ttyper = ["resources/language/*"]
